# DigitCA

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  swagger.json
crates/digitca-ocsp/: Cargo.toml  README.md
crates/digitca-ocsp/examples/flutter/: .gitignore
crates/digitca-ocsp/examples/kotlin/: settings.gradle.kts
crates/digitca-ocsp/examples/kotlin/src/main/kotlin/: Main.kt
crates/digitca-ocsp/examples/rust/: Cargo.toml
crates/digitca-ocsp/src/: lib.rs  main.rs
docs/: TZ.docx  TZ.md
examples/: 00_start_dev.sh  01_health.sh  02_swagger_docs.sh  03_openapi_json.sh  10_init_ca.sh  10_init_root.sh  11_export_root.sh  12_init_intermediate.sh  13_export_intermediate.sh  20_issue_and_list.sh  20_issue_certificate.sh  21_list_certificates.sh  22_get_certificate.sh  23_verify_certificate.sh  24_revoke_certificate.sh  25_get_certificate_chain.sh  30_get_root_crl.sh  30_revoke_and_crl.sh  31_get_intermediate_crl.sh  40_audit_log.sh  40_chain_and_verify.sh  50_ldap_search_by_cn.sh  README.md
examples/multilang/: README.md
examples/multilang/flutter/: README.md  pubspec.yaml
examples/multilang/flutter/lib/: main.dart
examples/multilang/kotlin/: README.md  build.gradle.kts  settings.gradle.kts
examples/multilang/kotlin/src/main/kotlin/: Main.kt
examples/multilang/nodejs/: README.md  index.mjs  package.json
examples/multilang/rust/: Cargo.toml  README.md
examples/multilang/rust/src/: main.rs
examples/ocsp_multilang/: README.md
examples/ocsp_multilang/bash/: ocsp_example.sh
examples/ocsp_multilang/flutter/: pubspec.yaml
examples/ocsp_multilang/kotlin/: build.gradle.kts
examples/ocsp_multilang/nodejs/: index.mjs  package.json
examples/ocsp_multilang/rust/src/: main.rs
infra/ldap/: bootstrap.ldif
scripts/: README.md  deploy_production.sh
src/: ca.rs  config.rs  error.rs  ldap_auth.rs  ldap_publish.rs  lib.rs  main.rs  models.rs  service.rs  storage.rs
src/api/: auth.rs  dto.rs  handlers.rs  mod.rs  openapi.rs
tests/: api.rs  cli.rs
