[package]
name = "digitca"
version = "0.1.0"
edition = "2021"

[workspace]
resolver = "2"
members = ["crates/digitca-ocsp"]

[dependencies]
async-trait = "0.1"
axum = { version = "0.7", features = ["macros"] }
base64 = "0.22"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dotenvy = "0.15"
futures = "0.3"
foreign-types = "0.3"
ldap3 = { version = "0.11", default-features = false, features = ["tls-rustls"] }
mongodb = { version = "2.8", default-features = false, features = ["tokio-runtime", "openssl-tls", "bson-chrono-0_4"] }
openssl = { version = "0.10", features = ["vendored"] }
openssl-sys = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
utoipa = { version = "5", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }
uuid = { version = "1", features = ["v4", "serde"] }

[dev-dependencies]
http-body-util = "0.1"

